--- a/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -10,6 +10,7 @@
       id="pensamento"
       name="pensamento"
       placeholder="Digite o pensamento"
+      [(ngModel)]="pensamento.conteudo"
     >
     <label for="autoria">Autoria ou fonte</label>
     <input
@@ -18,6 +19,7 @@
       id="autoria"
       name="autoria"
       placeholder="Digite a autoria ou fonte"
+      [(ngModel)]="pensamento.autoria"
     >
 
     <label for="modelo">Selecione o modelo do card:</label>
@@ -29,6 +31,7 @@
                     id="modelo1"
                     value="modelo1"
                     name="modelo-card"
+                    [(ngModel)]="pensamento.modelo"
                 >
                 <div class="custom-radio">
                     <span></span>
@@ -38,8 +41,8 @@
             Prévia:
             <div class="modelo modelo1 ff-roboto-mono">
                 <img src="../../../../assets/imagens/modelo1.png" alt="Aspas azuis">
-                <p class="conteudo">Aqui vai o conteúdo</p>
-                <p class="autoria"><b>Aqui vai a autoria</b></p>
+                <p class="conteudo">{{ pensamento.conteudo }}</p>
+                <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
             </div>
 
         </div>
@@ -50,6 +53,7 @@
                   id="modelo2"
                   value="modelo2"
                   name="modelo-card"
+                  [(ngModel)]="pensamento.modelo"
               >
               <div class="custom-radio">
                   <span></span>
@@ -59,8 +63,8 @@
           Prévia:
           <div class="modelo modelo2 ff-roboto-mono">
               <img src="../../../../assets/imagens/modelo2.png" alt="Aspas azuis">
-              <p class="conteudo">Aqui vai o conteúdo</p>
-              <p class="autoria"><b>Aqui vai a autoria</b></p>
+              <p class="conteudo">{{ pensamento.conteudo }}</p>
+              <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
           </div>
 
         </div>
@@ -71,6 +75,7 @@
                 id="modelo3"
                 value="modelo3"
                 name="modelo-card"
+                [(ngModel)]="pensamento.modelo"
             >
             <div class="custom-radio">
                 <span></span>
@@ -80,15 +85,15 @@
         Prévia:
         <div class="modelo modelo3 ff-roboto-mono">
             <img src="../../../../assets/imagens/modelo3.png" alt="Aspas azuis">
-            <p class="conteudo">Aqui vai o conteúdo</p>
-            <p class="autoria"><b>Aqui vai a autoria</b></p>
+            <p class="conteudo">{{ pensamento.conteudo }}</p>
+            <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
         </div>
 
       </div>
     </div>
     <div class="acoes">
-      <button class="botao">Salvar</button>
-      <button class="botao">Cancelar</button>
+      <button (click)="criarPensamento()" class="botao">Salvar</button>
+      <button  routerLink="/" (click)="cancelar()" class="botao">Cancelar</button>
     </div>
-    </form>
+  </form>
 </section>
