--- a/src/app/componentes/pensamentos/pensamento/pensamento.component.css
+++ b/src/app/componentes/pensamentos/pensamento/pensamento.component.css
@@ -62,3 +62,17 @@
     width: 100%;
   }
 }
+
+.botao-editar,
+.botao-excluir,
+.botao-favorito {
+  border: none;
+  cursor: pointer;
+  margin-right: 5px;
+  margin-top: 15px;
+}
+
+.estilo-botao {
+  width: 32px;
+  height: 32px;
+}
