--- a/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
@@ -11,13 +11,20 @@
       >
       <img class="lupa" src="/assets/imagens/lupa.png" alt="Lupa azul">
     </div>
-      <h2 class="ff-inter">Meu Mural</h2>
-      <button routerLink="/criarPensamento" class="botao">Adicionar pensamento</button>
+      <h2 class="ff-inter" >Meu Mural</h2>
+      <div class="botoes">
+        <button class="botao" (click)="pesquisarPensamentos()">Meu Mural</button>
+        <button class="botao" (click)="listarPensamentosFavoritos()">Meus Favoritos</button>
+      </div>
+      <button routerLink="/criarPensamento" class="botao">Novo pensamento</button>
   </header>
   <div class="mural" *ngIf="listaPensamentos.length > 0, else semPensamentos">
 
     <div *ngFor="let pensamento of listaPensamentos">
-      <app-pensamento [pensamento]="pensamento"></app-pensamento>
+      <app-pensamento
+        [pensamento]="pensamento"
+        [listaFavoritos]="listaFavoritos"
+      ></app-pensamento>
     </div>
   </div>
 </section>
