--- a/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
@@ -13,10 +13,10 @@
     </div>
       <h2 class="ff-inter" >Meu Mural</h2>
       <div class="botoes">
-        <button class="botao" (click)="pesquisarPensamentos()">Meu Mural</button>
+        <button class="botao" (click)="recarregarComponente()">Meu Mural</button>
         <button class="botao" (click)="listarPensamentosFavoritos()">Meus Favoritos</button>
+        <button routerLink="/criarPensamento" class="botao">Novo pensamento</button>
       </div>
-      <button routerLink="/criarPensamento" class="botao">Novo pensamento</button>
   </header>
   <div class="mural" *ngIf="listaPensamentos.length > 0, else semPensamentos">
 
